# oncoai-patient-outcome-navigator

./: .env  .gitignore  LICENSE  README.md  Untitled1.ipynb  pyproject.poetry.toml  pyproject.toml  requirements.txt  restructure_project.sh
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: README.md
models/: feature_names.txt  logreg_model_run_2eb451d41c9f46fca1a6ec0192799c59.joblib  logreg_model_run_533af684cc7142de8053496a19833157.joblib  logreg_model_run_5786a4ba65d64109af61f88cdac74e18.joblib  logreg_model_run_c3785ae8651b4ee98347591d0bec6de2.joblib  logreg_model_run_ec9d27fa6a394cfeb283ce1a4b6951d3.joblib  logreg_model_run_fca33e7e3ac04a488f1f3f64486b0e27.joblib  model.pkl  scaler.pkl
notebooks/: 01_feature_engineering.ipynb  README.md
reports/: README.md
sql/: 01_mimic-iii_dataload.sql  02_define_cohort.sql  03_extract_all_labs.sql  03_extract_all_vitals.sql  03_extract_all_vitals_labs.sql  03_extract_labs_vitals.sql
src/: 01_feature_engineering.ipynb  README.md  Untitled1.ipynb  pyproject.toml
src/.ipynb_checkpoints/: 01_feature_engineering-checkpoint.ipynb  model_training-checkpoint.ipynb
src/mlruns/0/: meta.yaml
src/mlruns/877022350696913683/: meta.yaml
src/mlruns/877022350696913683/5b3335d18aca4fa09a0f981791239f53/: meta.yaml
src/mlruns/877022350696913683/5b3335d18aca4fa09a0f981791239f53/params/: inference_model_path
src/mlruns/877022350696913683/5b3335d18aca4fa09a0f981791239f53/tags/: mlflow.runName
src/mlruns/877022350696913683/682c49a9e9c24808afe5061e127c04ac/: meta.yaml
src/mlruns/877022350696913683/766eeb25beb347adaf64b216da73a0a1/: meta.yaml
src/mlruns/877022350696913683/78fb9bd384e54d248cb67ec08fe0ca7c/: meta.yaml
src/oncoai_prototype/data_loading/: 02_define_onco_cohort.sql  03b_extract_all_vitals_48h.sql
src/oncoai_prototype/data_processing/: feature_engineering.py  feature_engineering_pipeline.py
src/oncoai_prototype/modeling/: model_training.py  model_training_pipeline.py  predict.py  predict_inference_script.py
src/oncoai_prototype/utils/: db_utils.py  feature_utils.py  io_utils.py  leakage.py  preprocessing.py  shap_utils.py
(+432 files in other folders)
