[tool.poetry]
name = "oncoai-prototype"
version = "1.0.0"
description = "Core Python application for OncoAI Patient Outcome Navigator."
authors = ["Sangeeth George <your.email@example.com>"] # Good practice to include email
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11" # Poetry's Python version constraint
pandas = "^2.3.0"
scikit-learn = "^1.7.0"
duckdb = "^1.3.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
xgboost = "^3.0.2"
numpy = "2.2.6"
shap = "^0.48.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.4"
ipykernel = "^6.29.4" # Make sure to add ipykernel if it's not there

[build-system]
requires = ["poetry-core>=1.0.0"] # Poetry's build system requirement
build-backend = "poetry.core.masonry.api"

